--- a/src/main/webapp/script/prioridad/List.xhtml
+++ b/src/main/webapp/script/prioridad/List.xhtml
@@ -96,7 +96,7 @@
 
                         <f:facet name="footer">
                             <p:toolbar style="border: none;">
-                                <p:toolbarGroup id="menuAcciones" align="center">
+                                <p:toolbarGroup align="left">
 
                                     <p:outputLabel value="Páginas de "/>
                                     <p:selectOneMenu id="cant" value="#{prioridadController.paginationPageSize}" style="top: 7px">
@@ -122,7 +122,7 @@
                                     <p:separator/>
                                     <p:commandButton ajax="false" action="#{prioridadController.prepareCreate}" value="#{bundle.ListPrioridadCreateLink}" icon="ui-icon ui-icon-plus" rendered="#{filtroAcceso.verificarAccesoAFuncionEditarAjustes()}"/>
 
-                                </f:facet>
+                                </p:toolbarGroup>
                             </p:toolbar>
                         </f:facet>
 
