--- a/src/main/webapp/script/tipoCaso/List.xhtml
+++ b/src/main/webapp/script/tipoCaso/List.xhtml
@@ -60,7 +60,7 @@
 
                         <f:facet name="footer">
                             <p:toolbar style="border: none;">
-                                <p:toolbarGroup id="menuAcciones" align="center">
+                                <p:toolbarGroup id="menuAcciones" align="left">
                                     
                                        <p:outputLabel value="Páginas de "/>
                                     <p:selectOneMenu id="cant" value="#{tipoCasoController.paginationPageSize}" style="top: 7px">
@@ -79,7 +79,7 @@
                                     <p:commandButton ajax="false" action="#{tipoCasoController.prepareCreate}" value="#{bundle.ListTipoCasoCreateLink}"
                                                      rendered="#{filtroAcceso.verificarAccesoAFuncionEditarAjustes()}" icon="ui-icon ui-icon-plus"/>
 
-                                </f:facet>
+                                </p:toolbarGroup>
                             </p:toolbar>
 
 
