--- a/src/main/webapp/script/reglaTrigger/Create.xhtml
+++ b/src/main/webapp/script/reglaTrigger/Create.xhtml
@@ -207,6 +207,7 @@
 
                         <p:column style="width: 300px;">
                             <p:selectOneMenu id="idNombreAccion" value="#{accion.idNombreAccion}" 
+                                             filter="true" filterMatchMode="contains"
                                              required="true" requiredMessage="Se requiere una acci&oacute;n para ejecutar en la regla" styleClass="full-width">
                                 <p:ajax update=":form:accionesTable"/>
                                 <f:selectItems value="#{nombreAccionController.itemsAvailableSelectOne}"/>
@@ -218,6 +219,7 @@
                             <p:selectOneMenu value="#{accion.parametros}" 
                                              rendered="#{reglaTriggerController.esAccionAsignarArea(accion)}"
                                              required="true" requiredMessage="Se requiere que seleccione una Accion."
+                                             filter="true" filterMatchMode="contains"
                                              styleClass="full-width">
                                 <p:ajax update=":form:accionesTable"/>
                                 <f:selectItems value="#{areaController.stringItemsAvailableSelectOne}"/>
@@ -226,6 +228,7 @@
                             <p:selectOneMenu value="#{accion.parametros}" 
                                              rendered="#{reglaTriggerController.esAccion(accion, EnumNombreAccion.DEFINIR_TIPO)}"
                                              required="true" requiredMessage="Se requiere que seleccione una Accion."
+                                             filter="true" filterMatchMode="contains"
                                              styleClass="full-width">
                                 <p:ajax update=":form:accionesTable"/>
                                 <f:selectItems value="#{tipoCasoController.stringItemsAvailableSelectOne}"/>
@@ -233,7 +236,7 @@
 
                             <p:selectOneMenu id="idAccionCustom" label="Action Class" filter="true" filterMatchMode="contains"
                                              value="#{accion.parametros}" styleClass="full-width"
-                                             required="true" requiredMessage="Se requiere que seleccione una clase que implemente la Accion."                               
+                                             required="true" requiredMessage="Se requiere que seleccione una clase que implemente la Accion."     
                                              rendered="#{reglaTriggerController.esAccionCustom(accion)}">
 
                                 <c:forEach items="#{reglaTriggerController.actionClassNames}" var="actionclass" varStatus="loop">
@@ -244,6 +247,7 @@
 
                             <p:selectOneMenu value="#{accion.parametros}" 
                                              rendered="#{reglaTriggerController.esAccionAsignarAGrupo(accion)}"
+                                             filter="true" filterMatchMode="contains"
                                              styleClass="full-width">
                                 <p:ajax update=":form:accionesTable"/>
                                 <f:selectItems value="#{grupoController.stringItemsAvailableSelectOne}"/>
@@ -251,6 +255,7 @@
 
                             <p:selectOneMenu value="#{accion.parametros}" 
                                              rendered="#{reglaTriggerController.esAccionAsignarAUsuario(accion)}"
+                                             filter="true" filterMatchMode="contains"
                                              styleClass="full-width">
                                 <p:ajax update=":form:accionesTable"/>
                                 <f:selectItems value="#{usuarioController.stringItemsAvailableSelectOneNoSystem}"/>
@@ -258,6 +263,7 @@
 
                             <p:selectOneMenu value="#{accion.parametros}" 
                                              rendered="#{reglaTriggerController.esAccionCambiarPrioridad(accion)}"
+                                             filter="true" filterMatchMode="contains"
                                              styleClass="full-width">
                                 <p:ajax update=":form:accionesTable"/>
                                 <f:selectItems value="#{prioridadController.stringItemsAvailableSelectOne}"/>
