--- a/src/main/webapp/script/usuario/View_1.xhtml
+++ b/src/main/webapp/script/usuario/View_1.xhtml
@@ -12,7 +12,7 @@
         </h:head>
         <h:body>
             <h:form>
-                <p:panelGrid styleClass="filtersGrid" style="width: 100%;">
+                <p:panelGrid styleClass="filtersGrid" >
                     <p:row>
                         <p:column>
                             <h:panelGrid columns="1">
@@ -88,7 +88,7 @@
 
                                 <h:panelGrid >
 
-                                    <p:chart type="metergauge" model="#{usuarioController.meterGaugeModel}" 
+                                    <p:meterGaugeChart value="#{usuarioController.meterGaugeModel}" 
                                                        style="width:400px;height:250px" />  
 
 
@@ -102,69 +102,8 @@
 
                 <h2>Casos abiertos del Agente</h2>
                 <p:separator/>
-                <p:dataTable widgetVar="CasoTable" var="item" value="#{usuarioController.casoAbiertoList}"                               
-                             emptyMessage="(No se han encontrado elementos)" 
-                             rowKey="#{item.idCaso}" rowStyleClass="#{casoController.evaluarStyle(item)}"
-                             sortBy="#{item.fechaCreacion}"
-                             sortOrder="descending"
-                             draggableColumns="true">                                   
-
-                    <p:column headerText="Abrir">
-                        <p:commandButton id="editBtn" ajax="false" action="#{casoController.prepareEdit(item)}" title="Abrir caso" icon="ui-icon ui-icon-pencil" 
-                                         onclick="this.form.target='_top'"/>
-                    </p:column>
-
-                    <p:column headerText="A" style="max-width: 20px;">
-
-                        <h:graphicImage value="/images/user-available.png" title="Caso pendiente (entre 0 y 50% del tiempo asignado)" rendered="#{item.estadoAlerta.idalerta eq 1 and item.idEstado.idEstado eq 'abierto'}"/>
-                        <h:graphicImage value="/images/dialog-warning-3.png" title="Caso por vencer (mas del 50% del tiempo asignado)" rendered="#{item.estadoAlerta.idalerta eq 2 and item.idEstado.idEstado eq 'abierto'}"/>
-                        <h:graphicImage value="/images/software-update-urgent-2.png" title="Caso vencido (mas del 100% del tiempo asignado)" rendered="#{item.estadoAlerta.idalerta eq 3 and item.idEstado.idEstado eq 'abierto'}"/>
-                        <h:graphicImage value="/images/locked.png" title="Caso cerrado" rendered="#{item.idEstado.idEstado eq 'cerrado'}"/>
-                    </p:column>
-
-                    <p:column headerText="P">
-                        <h:outputText value="" rendered="#{item.esPrioritario eq false}"/>
-                        <h:graphicImage value="/images/bookmarks.png" rendered="#{item.esPrioritario eq true}"/>
-                    </p:column>
-
-                    <p:column headerText="ID Caso" sortBy="#{item.idCaso}">
-                        <p:commandLink action="#{casoController.prepareEdit(item)}" ajax="false" value="#{item.idCaso}" />
-                    </p:column>
-
-                    <p:column sortBy="#{item.fechaCreacion}" headerText="Fecha creación">
-                        <h:outputText value="#{item.fechaCreacion}">
-                            <f:convertDateTime pattern="dd/MMM/yyyy HH:mm"/>
-                        </h:outputText>
-                    </p:column>
-
-                    <p:column sortBy="#{item.nextResponseDue}" headerText="SLA">
-                        <h:outputText value="#{item.nextResponseDue}">
-                            <f:convertDateTime pattern="dd/MMM/yyyy HH:mm"/>
-                        </h:outputText>
-                    </p:column>
-
-                    <p:column headerText="Tema" sortBy="#{item.tema}">
-                        <p:commandLink action="#{casoController.prepareEdit(item)}" ajax="false" value="#{item.tema}" />
-                    </p:column>                                                                         
-
-                    <p:column headerText="Cliente" sortBy="#{item.emailCliente.cliente.nombres} #{item.emailCliente.cliente.apellidos}">
-                        <p:commandLink rendered="#{not (item.emailCliente.cliente eq null)}" action="#{emailClienteController.prepareView(item.emailCliente)}" ajax="false" value="#{item.emailCliente.cliente.nombres} #{item.emailCliente.cliente.apellidos} &lt;#{item.emailCliente.emailCliente}&gt;" />
-
-                    </p:column>
-
-                    <p:column headerText="Estado" sortBy="#{item.idSubEstado.nombre}">
-                        <h:outputText value="#{item.idSubEstado.nombre}"/>
-                    </p:column>
-
-
-
-                </p:dataTable>
 
                 <br/>
-
-
-
-
             </h:form>
         </h:body>
 
