--- a/src/main/webapp/script/sub_estado_caso/Create.xhtml
+++ b/src/main/webapp/script/sub_estado_caso/Create.xhtml
@@ -33,10 +33,9 @@
                         <p:message for="nombre"/>
 
                         <h:outputLabel value="#{bundle.CreateTipoCasoLabel_idTipoCaso}" for="idTipoCaso"  style="font-weight: bold"/>
-                        <p:selectOneMenu id="idTipoCaso" 
+                        <p:selectOneMenu id="idTipoCaso" converter="TipoCasoControllerConverter"
                                          filter="true" filterMatchMode="contains"
                                          value="#{subEstadoCasoController.selected.tipoCaso}">
-                            <f:selectItem itemLabel="" itemValue=""/>
                             <f:selectItems value="#{applicationBean.tipoCasoAvailableList}" var="tipo" itemLabel="#{tipo.nombre}" itemValue="#{tipo}" itemDescription="#{tipo.descripcion}"/>
                         </p:selectOneMenu>
                         <p:message for="idTipoCaso"/>
